--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "packageManager": "pnpm@10.15.0",
   "dependencies": {
     "cors": "^2.8.6",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
